fixes tests